--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
   </head>
   <body
     data-sveltekit-preload-data="hover"
-    class="bg-gradient-to-b from-cyan-50 to-green-50"
+    class="bg-gray-900"
     style="height: 100vh"
   >
     <div style="display: contents">%sveltekit.body%</div>
